Update styles and fix layout issues

--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -30,7 +30,7 @@
         padding-left: 150px;
         padding-right: 150px;
     }
-    @media (max-width: 767.98px) {
+    @media (max-width: 900.98px) {
         padding-left: 0;
         padding-right: 0;
     }
